# Prompt_to_Database

./: about_project.txt  app.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: create_database.html  dashboard.html  login.html  view_databases.html
